# resting

./: .gitignore  CMakeLists.txt  main.c
docs/: requests.org
include/resting/: request.h
include/resting/http/: message.h
src/: CMakeLists.txt
test/: CMakeLists.txt  request.test.c
